# src/dto/game.dto.ts
@@ -3,5 +3,6 @@ import { ConsoleDTO } from "./console.dto";
 export interface GameDTO {
   id?: number;
   title: string;
+  console_id:number,
   console?: ConsoleDTO;
 }
